--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "lucide-react": "^0.487.0",
     "next": "15.3.0",
     "next-themes": "^0.4.6",
+    "nextjs-toploader": "^3.8.16",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
